<resources>
    <string name="app_name">Math questions and answers</string>
    <string name="login">Verification</string>
    <string name="hint_for_phone">Enter your phone number</string>
    <string name="verify">Confirmation</string>
    <string name="input_code">Enter if you received an SMS code</string>
    <string name="check">Check</string>
    <string name="error">Error</string>
    <string name="error_connection">Could not connect to network Try again</string>
    <string name="close">Close</string>
    <string name="error_number">The number you entered is incorrect</string>
    <string name="error_unknown">Unknown error. Error message:</string>
    <string name="error_code">The code you entered is incorrect</string>
    <string name="error_insert_number">Enter your number with a \"+\" sign</string>
    <string name="write_code">Write the code first</string>
    <string name="timeout">Waiting time for the sms code is over, try again</string>
    <string name="wait">Wait …</string>
    <string name="your_name">First name</string>
    <string name="your_surname">Last name</string>
    <string name="add_image">Picture selection</string>
    <string name="change_image">Change the image</string>
    <string name="name_surname_required">Must have first name and last name</string>
    <string name="choose_image">Picture selection</string>
    <string name="unknown">Unknown</string>
    <string name="cannot_delete_existing_file">Could not delete existing file</string>
    <string name="file_not_exists">The file does not exist, try again</string>
    <string name="error_on_creating_image_file">An error occurred while creating the file for the image. Please try again</string>
    <string name="search_users">Search for users</string>
    <string name="no_results_found">No results found</string>
    <string name="you_need_upload_image">You need to upload a question picture</string>
    <string name="cancel">Cancel</string>
    <string name="privateS">Private</string>
    <string name="pu_blic">Public questions</string>
    <string name="my_questions">My questions</string>
    <string name="image_is_uploading">Image is uploading.Wait</string>
    <string name="settings">Settings</string>
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="year">year</string>
    <string name="activity">Activity:</string>
    <string name="yesterday">yesterday</string>
    <string name="write_message">Type message</string>
    <string name="reinstall_app">Try reinstall app</string>
    <string name="error_download_file">Error on downloading file</string>
    <string name="today">today</string>
    <string name="no_messages">No messages</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="copy">Copy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete_message">Do you want to delete this message?</string>
    <string name="error_deleting">Error deleting data:</string>
    <string name="to_top">Scroll to top</string>
    <string name="to_bottom">Scroll to bottom</string>
    <string name="copied">Copied</string>
    <string name="empty">The message should not be empty</string>
    <string name="sender">Sender:</string>
    <string name="time">Published time:</string>
    <string name="theme">Theme:</string>
    <string name="no_questions">No questions</string>
    <string name="select_theme">Select theme</string>
    <string name="publish">Post</string>
    <string name="answer">Answer to this</string>
    <string name="explainAnswer">Explain your answer</string>
    <string name="publishAnswer">Post the answer</string>
    <string name="permission_error">You cannot use this app if you are not grant this permission</string>
    <string name="confirmDeleteImageM">Do you want to delete this image?</string>
    <string name="youAreOffline">You cannot delete picture messages offline</string>
    <string name="image_downloading">The image is downloading, wait</string>
    <string name="phone_number">Phone number:</string>
    <string name="numberOfPublishedQ">Number of questions:</string>
    <string name="numberOfAnswers">Number of answers:</string>
    <string name="correctAnswers">Number of correct answers:</string>
    <string name="incorrectAnswers">Number of incorrect answers:</string>
    <string name="status">Status:</string>
    <string name="gotoChat">Goto chat</string>
    <string name="newMessage">new message(s)</string>
    <string name="byName">Search direction: by name</string>
    <string name="bySurname">Search direction: by last name</string>
    <string name="filterByName">Do you want to search by name?</string>
    <string name="filterBySurname">Do you want to search by surname?</string>
    <string name="mustBeUpper">It should start with a capital letter</string>
    <string name="profileInfo">Profile info</string>
    <string name="deleteChatRequest">Are you want to delete chat with xxx?</string>
    <string name="accountSettings">Account settings</string>
    <string name="editName">Rename</string>
    <string name="editSurname">Change last name</string>
    <string name="questionLimitError">You cannot post a question right now because the number of open questions must be less than or equal to xxx</string>
    <string name="themeReq">You must select a theme</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="deleteQuestion">The user cannot delete the question</string>
    <string name="explanationAndImage">Comment and select a response image</string>
    <string name="need">I need it too</string>
    <string name="needsUsers">The answer to this question is needed by the xxx user</string>
    <string name="noEnoughUnits">You don\'t have enough units to post a question. You have xxx units, but you need yyy unit to post the question in 1 day for public questions.Are you want to get units?</string>
    <string name="daysAvailable">How many days in public questions?</string>
    <string name="notEnoughUnitsForDay">You don\'t have enough units to post the question for xxx days because you have yyy unit but you need zzz unit to post the question for 1 day,so post question for xxx day,you need ttt units</string>
    <string name="visibleTime">Closing time:</string>
    <string name="units">Units:</string>
    <string name="needQuestions">Questions you need</string>
    <string name="searchQuestions">Search for questions</string>
    <string name="ascending">The old ones first</string>
    <string name="descending">New ones first</string>
    <string name="order">Order:</string>
    <string name="selectOrder">Select order</string>
    <string name="selectThemeAtLeast">At least choose a theme</string>
    <string name="selectDate">Select a date</string>
    <string name="date">Date:</string>
    <string name="after">After that date</string>
    <string name="before">Before that date</string>
    <string name="statusQuestion">Question status</string>
    <string name="answered">Correctly answered questions</string>
    <string name="unanswered">Questions without correct answers</string>
    <string name="addUnits">Additional units</string>
    <string name="showAdText">If you want to have units, you have to answer an optional question and the questioner has to click the correct button on your answer so that you have xxx units. If you can\'t answer any questions right now, you can have an xxx unit by viewing the ad (by clicking the view ad button)</string>
    <string name="showAd">View ad</string>
    <string name="addedUnits">xxx unit added</string>
    <string name="policy">User policy</string>
    <string name="notificationSettings">Notification setting</string>
    <string name="hidden">Hidden</string>
    <string name="changed">Changed</string>
    <string name="lang">eng</string>
    <string name="nPrivate">Private chat notifications</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="soundsDisabled">Notification sound muted</string>
    <string name="soundsEnabled">The notification sound is on</string>
    <string name="vibrateDisabled">Notification vibrations disabled</string>
    <string name="vibrateEnabled">Notification vibrations enabled</string>
    <string name="privateDisabled">Private chat notifications disabled</string>
    <string name="privateEnabled">Private chat notifications enabled</string>
    <string name="notificationEnabled">Notifications enabled for questions about aaa</string>
    <string name="notificationsDisabled">Notifications disabled for questions about aaa</string>
    <string name="newQuestionMessage">New Question about aaa</string>
    <string name="loadMore">Download more</string>
    <string name="noMoreQ">No more questions</string>
    <string name="sentAnswer">answered a question on the xxx theme you need</string>
    <string name="newMInQ">Sent a message in a question about xxx you need:</string>
    <string name="newIInQ">sent a picture to the xxx theme question you need</string>
    <string name="imageMessage">sent you a picture</string>
    <string name="confirmDeleteFromINeed">Do you want to delete the question from Questions you need section? Then you can find it in the search</string>
    <string name="noChats">No data</string>
    <string name="copyQuestionId">Copy question id</string>
    <string name="byQuestionId">Type id or filter questions</string>
    <string name="cancelLoading">Cancel?</string>
    <string name="noMoreM">No more messages</string>
    <string name="showQuestion">Show question</string>
    <string name="smsSent">The sms code was sent to xxx</string>
    <string name="camera">Camera</string>
    <string name="memory">Memory</string>
    <string name="storagePermission">Allow storage permissions to this app for app working correctly</string>
    <string name="setVisibleTime">Enter how many days the question will be public</string>
    <string name="day">Day mode</string>
    <string name="night">Night mode</string>
    <string name="followSystem">Follow system</string>
    <string name="disableQCH">Disable notifications from this question chat</string>
    <string name="enableQCH">Enable notifications from this question chat</string>
    <string name="loading">Loading …</string>
    <string name="optional">Optional</string>
    <string name="deleteProfileImage">Delete profile image</string>
    <string name="makePublic">Make public again</string>
    <string name="chooseHowManyDays">Choose how many days visible in public questions.</string>
    <string name="dayVisible">day</string>
    <string name="daysVisible">days</string>
    <string name="confirmUnitDecrease">You want to post the question xxx days. You will need a yyy unit to post the question for a day. You will need a zzz unit to post the xxx day. Do you confirm?</string>
    <string name="posted">Posted</string>
    <string name="youBlocked">You are blocked until xxx</string>
    <string name="confirmAddToChats">Do you want to add chat with xxx to Private chats?</string>
    <string name="block">Block</string>
    <string name="unblock">Remove the block</string>
    <string name="youBlockedBy">You are blocked for this user</string>
    <string name="agreePrivacy">I agree to the terms of use</string>
    <string name="typeReply">Type reply here</string>
    <string name="send">Send</string>
</resources>