<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.QuestionFilter">

    <Button
        android:id="@+id/selectTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:text="@string/select_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/theme"
        android:text="@string/theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectTheme"/>

    <Button
        android:id="@+id/selectDirection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:text="@string/selectOrder"
        app:layout_constraintTop_toBottomOf="@id/theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/direction"
        android:text="@string/order"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectDirection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:text="@string/selectDate"
        app:layout_constraintTop_toBottomOf="@id/direction"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/selectDate"
        app:layout_constraintTop_toTopOf="@id/selectDate"
        app:layout_constraintBottom_toBottomOf="@id/selectDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        android:text="@string/before"
        android:paddingHorizontal="10dp"/>
    <TextView
        android:id="@+id/date"
        android:text="@string/date"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/statusOfQuestion"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"
        android:text="@string/statusQuestion"
        android:paddingHorizontal="10dp"/>
    <TextView
        android:id="@+id/status"
        android:text="@string/statusQuestion"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/statusOfQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:text="@string/select_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>