<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.AuthUser">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/black_cursor_drawable"
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/hint_for_phone"
        android:background="@drawable/text_fields_in_big_screens"
        android:drawableStart="@drawable/phone_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_for_phone"
        android:inputType="phone"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintVertical_bias="0.19" />

    <CheckBox
        android:layout_marginStart="20sp"
        android:id="@+id/checkBox"
        android:checked="false"
        android:buttonTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/privacy"
        app:layout_constraintTop_toTopOf="@id/privacy" />
    <TextView
        android:id="@+id/privacy"
        android:textColor="@color/blue"
        android:text="@string/agreePrivacy"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintBottom_toTopOf="@id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/verify"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>