<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nested"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/replyText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/replyText"
        android:textCursorDrawable="@drawable/black_cursor_drawable"
        app:layout_constraintBottom_toTopOf="@id/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/typeReply"
        android:textColorHint="@color/hint"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10dp"
        android:background="@drawable/text_fields_in_big_screens"
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/send"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/replyText"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/send"
        app:layout_constraintEnd_toEndOf="@id/replyText"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>