<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AnswerToQuestion">
    <!--    nightMode added-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:textColor="@color/black"
            android:inputType="text"
            android:textCursorDrawable="@drawable/black_cursor_drawable"
            android:id="@+id/explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_fields_in_big_screens"
            app:layout_constraintStart_toStartOf="@id/answerQuestion"
            app:layout_constraintEnd_toEndOf="@id/answerQuestion"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/explainAnswer"
            android:textColorHint="@color/hint"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:padding="13sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="176dp"
            android:background="@drawable/button_background"
            android:text="@string/choose_image"
            app:layout_constraintEnd_toEndOf="@id/answerQuestion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/answerQuestion"
            app:layout_constraintTop_toBottomOf="@id/explanation" />

        <ImageView
            android:id="@+id/imageOfAnswer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/chooseImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/privacy"
            android:layout_marginVertical="5dp"/>

        <CheckBox
            android:layout_marginStart="20sp"
            android:id="@+id/checkBox"
            android:checked="false"
            android:buttonTint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/privacy"
            app:layout_constraintTop_toTopOf="@id/privacy" />
        <TextView
            android:id="@+id/privacy"
            android:textColor="@color/blue"
            android:text="@string/agreePrivacy"
            android:gravity="start"
            app:layout_constraintStart_toEndOf="@id/checkBox"
            app:layout_constraintBottom_toTopOf="@id/answerQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/publishAnswer"
            android:id="@+id/answerQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/bigImage"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>